PLANET-2556 - Fix navbar search position on mobile

--- a/assets/scss/partials/_navbar.scss
+++ b/assets/scss/partials/_navbar.scss
@@ -367,7 +367,7 @@ $menu-height-large: 3.75rem;
 
 .nav-search-wrap {
   display: none;
-  position: relative;
+  position: absolute;
   color: $search-text-colour;
   top: 100%;
   right: 0;
@@ -381,6 +381,7 @@ $menu-height-large: 3.75rem;
   }
 
   @include large-and-up {
+    position: relative;
     max-width: 20%;
     width: 400px;
     display: inline-block;
